Dryfruit page demo ready

--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -10,7 +10,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js" crossorigin="anonymous"></script>
 
-  <title>Kela Brother's Mewawala | HOME :: H&H Enterprise</title>
+  <title>Kela Brother's Mewawala | DRY FRUITS :: H&H Enterprise</title>
 
 </head>
 
@@ -23,68 +23,68 @@
   <div class="dryfruits">
     <div class="protypes" id="sectionName1">
       <div data-toggle="collapse" data-target="#dryFruit1" data-parent="#sectionName1">
-        <h3>Dry Fruit 1 <i class="fas fa-chevron-down fa-md"></i> </h3>
+        <h3>Almonds <i class="fas fa-chevron-down fa-md"></i> </h3>
       </div>
       <div id="dryFruit1" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName1">
         <div class="dry-fruit-cards">
-          <span> QWERTY </span>
+          <span> Nutritional Fact about Almonds </span>
         </div>
         <div class="products products-five row">
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Dry Fruits One</h2>
+              <h2>Almond</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Dry Fruits Two</h2>
+              <h2>Masala Almond</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Dry Fruits Three</h2>
+              <h2>Salted Almond</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Dry Fruits Four</h2>
+              <h2>Chocolate Almond</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content5" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Dry Fruits Five</h2>
+              <h2>Rare Variety</h2>
             </div>
           </div>
         </div>
         <div class="products information row">
-          <div class="collapse multi-collapse" id="dryFruit1Content1" data-parent="#dryFruit1">
+          <div class="collapse multi-collapse w-100" id="dryFruit1Content1" data-parent="#dryFruit1">
             <div class="card card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Almonds facts
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content2" data-parent="#dryFruit1">
+          <div class="collapse multi-collapse w-100" id="dryFruit1Content2" data-parent="#dryFruit1">
             <div class="card card-body">
-              Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content II Masala Almonds facts.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content3" data-parent="#dryFruit1">
+          <div class="collapse multi-collapse w-100" id="dryFruit1Content3" data-parent="#dryFruit1">
             <div class="card card-body">
-              Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content III Salted Almonds facts.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content4" data-parent="#dryFruit1">
+          <div class="collapse multi-collapse w-100" id="dryFruit1Content4" data-parent="#dryFruit1">
             <div class="card card-body">
-              Content IV Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content IV Chocolate Almonds facts.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content5" data-parent="#dryFruit1">
+          <div class="collapse multi-collapse w-100" id="dryFruit1Content5" data-parent="#dryFruit1">
             <div class="card card-body">
-              Content V Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content V Rare Variety Almonds facts.
             </div>
           </div>
         </div>
@@ -122,17 +122,17 @@
           </div>
         </div>
         <div class="products information row">
-          <div class="collapse multi-collapse" id="dryFruit2Content1" data-parent="#dryFruit2">
+          <div class="collapse multi-collapse w-100" id="dryFruit2Content1" data-parent="#dryFruit2">
             <div class="card card-body">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit2Content2" data-parent="#dryFruit2">
+          <div class="collapse multi-collapse w-100" id="dryFruit2Content2" data-parent="#dryFruit2">
             <div class="card card-body">
               Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit2Content3" data-parent="#dryFruit2">
+          <div class="collapse multi-collapse w-100" id="dryFruit2Content3" data-parent="#dryFruit2">
             <div class="card card-body">
               Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
@@ -145,68 +145,68 @@
 
     <div class="protypes" id="sectionName3">
       <div data-toggle="collapse" data-target="#dryFruit3" data-parent="#sectionName3">
-        <h3>Almonds <i class="fas fa-chevron-down fa-md"></i></h3>
+        <h3>Pistachios <i class="fas fa-chevron-down fa-md"></i></h3>
       </div>
       <div id="dryFruit3" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName3">
         <div class="dry-fruit-cards">
-          <span> QWERTY </span>
+          <span> Pistachios Nutritional Fact </span>
         </div>
         <div class="products products-five row">
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content1" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Almonds One</h2>
+              <h2>Pistachios</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content2" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Almonds Two</h2>
+              <h2>Salted Pistachios</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content3" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Almonds Three</h2>
+              <h2>Masala Pistachios</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content4" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Almonds Four</h2>
+              <h2>Pistachios 4</h2>
             </div>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content5" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Almonds Five</h2>
+              <h2>Pistachios 5</h2>
             </div>
           </div>
         </div>
         <div class="products information row">
-          <div class="collapse multi-collapse" id="dryFruit3Content1" data-parent="#dryFruit3">
+          <div class="collapse multi-collapse w-100" id="dryFruit3Content1" data-parent="#dryFruit3">
             <div class="card card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Pistachios fact
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content2" data-parent="#dryFruit3">
+          <div class="collapse multi-collapse w-100" id="dryFruit3Content2" data-parent="#dryFruit3">
             <div class="card card-body">
-              Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content II Salted Pistachios fact.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content3" data-parent="#dryFruit3">
+          <div class="collapse multi-collapse w-100" id="dryFruit3Content3" data-parent="#dryFruit3">
             <div class="card card-body">
-              Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content III Masala Pistachios fact.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content4" data-parent="#dryFruit3">
+          <div class="collapse multi-collapse w-100" id="dryFruit3Content4" data-parent="#dryFruit3">
             <div class="card card-body">
-              Content IV Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content IV Pistachios 4 fact.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content5" data-parent="#dryFruit3">
+          <div class="collapse multi-collapse w-100" id="dryFruit3Content5" data-parent="#dryFruit3">
             <div class="card card-body">
-              Content V Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content V Pistachios 5 fact.
             </div>
           </div>
         </div>
@@ -221,42 +221,42 @@
       </div>
       <div id="dryFruit4" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName4">
         <div class="dry-fruit-cards">
-          <span> QWERTY </span>
+          <span> Cashew Nutritional Facts </span>
         </div>
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Cashew One</h2>
+              <h2>Cashew</h2>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit4Content2" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Cashew Two</h2>
+              <h2>Masala Cashew</h2>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit4Content3" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Cashew Three</h2>
+              <h2>Chocolate Cashew</h2>
             </div>
           </div>
         </div>
         <div class="products information row">
-          <div class="collapse multi-collapse" id="dryFruit4Content1" data-parent="#dryFruit4">
+          <div class="collapse multi-collapse w-100" id="dryFruit4Content1" data-parent="#dryFruit4">
             <div class="card card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Cashew facts.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit4Content2" data-parent="#dryFruit4">
+          <div class="collapse multi-collapse w-100" id="dryFruit4Content2" data-parent="#dryFruit4">
             <div class="card card-body">
-              Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content II Masala Cashew facts.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit4Content3" data-parent="#dryFruit4">
+          <div class="collapse multi-collapse w-100" id="dryFruit4Content3" data-parent="#dryFruit4">
             <div class="card card-body">
-              Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+              Content III Chocolate Cashew facts.
             </div>
           </div>
         </div>
