Fixing footer to bottom for mobile pages

--- a/kelabros/components/about.html
+++ b/kelabros/components/about.html
@@ -20,72 +20,68 @@
   <div id="header">
   </div>
 
-  <h3>Our Offering</h3>
+  <div class="about-body">
+    <h3>Our Offering</h3>
 
-  <div class="row Aboutexp">
-    <div class="col-lg-6 col-md-6 col-sm-6 about-section">
-      <div class="img-wrapper">
-        <img src="images/aboutImage1.jpeg">
+    <div class="row Aboutexp">
+      <div class="col-lg-6 col-md-6 col-sm-6 about-section">
+        <div class="img-wrapper">
+          <img src="images/aboutImage1.jpeg">
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 about-section">
+        <p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.
+          Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia
+          Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla.</p>
+      </div>
+
+    </div>
+    <div class="container mt-5 ml-3">
+      <div class="row about-row p-5">
+        <div class="card col-md-4 about-card">
+          <div class="text-center rounded">
+            <div class="card-header about-card-header">
+              <i class="fas fa-phone" aria-hidden="true"></i>
+              <h4>Call US anytime</h4>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+
+          </div>
+        </div>
+
+        <div class="card col-md-4 about-card">
+          <div class="text-center rounded">
+            <div class="card-header about-card-header">
+              <i class="fas fa-truck"></i>
+              <h4>HOME Delivery</h4>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+
+          </div>
+        </div>
+        <div class="card col-md-4 about-card">
+          <div class="text-center rounded">
+            <div class="card-header about-card-header">
+              <i class="fas fa-wallet"></i>
+              <h4>Secure Payments</h4>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+
+          </div>
+        </div>
+
+
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 about-section">
-      <p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.
-        Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia
-        Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla.</p>
-    </div>
-
   </div>
-  <div class="container mt-5 ml-3">
-    <div class="row about-row p-5">
-      <div class="card col-md-4 about-card">
-        <div class="text-center rounded">
-          <div class="card-header about-card-header">
-            <i class="fas fa-phone" aria-hidden="true"></i>
-            <h4>Call US anytime</h4>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-
-        </div>
-      </div>
-
-      <div class="card col-md-4 about-card">
-        <div class="text-center rounded">
-          <div class="card-header about-card-header">
-            <i class="fas fa-truck"></i>
-            <h4>HOME Delivery</h4>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-
-        </div>
-      </div>
-      <div class="card col-md-4 about-card">
-        <div class="text-center rounded">
-          <div class="card-header about-card-header">
-            <i class="fas fa-wallet"></i>
-            <h4>Secure Payments</h4>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-
-        </div>
-      </div>
-
-
-    </div>
-  </div>
-
 
   <div id="footer">
   </div>
 
-  <script>
-    $(function() {
-      $("#header").load("Header.html");
-      $("#footer").load("Footer.html");
-    });
-  </script>
+  <script src="js/headerFooter.js"></script>
 
 </body>
 
